fix left panel overlap

--- a/client/src/style/sass/common/_axes.scss
+++ b/client/src/style/sass/common/_axes.scss
@@ -11,7 +11,7 @@
     left: 0;
     position: fixed;
     z-index: 0;
-    margin-left: 412px;
+    margin-left: 432px;
     right: 0;
 
     .xaxis-bkgrnd {
