--- a/client/src/style/sass/common/_gridlayout.scss
+++ b/client/src/style/sass/common/_gridlayout.scss
@@ -18,7 +18,7 @@
 .grid-layout {
     background: $body-bg;
     bottom: 0;
-    left: 412px;
+    left: 432px;
     position: absolute;
     right: 5px;
     top: 40px;
