--- a/client/src/style/sass/common/filter-header.scss
+++ b/client/src/style/sass/common/filter-header.scss
@@ -1,6 +1,7 @@
 .filter-header {
   padding: 14px 15px;
   border-bottom: 1px solid #EBEFF2;
+  background-color: white;
 
   &__list {
     display: flex;
